--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="intro">
+        <span id="avallon">Avallon</span>
+        <span id="portfolio">Portfólio</span>
+    </div>
+
     <header>
         <nav>
             <div class="menu-container">
-                <a href="#" class="logo" onclick="scrollToSection('home')"><svg class="isvg-container" id="outputsvg" xmlns="http://www.w3.org/2000/svg" style="transform: matrix(1.01591, 0, 0, 1.01591, -17.3648, -3.48028); transform-origin: 50% 50%; transform:scale(1.5); cursor: pointer; transition: none 0s ease 0s;" width="23" height="24" viewBox="0 0 2300 2400"><g id="l6nyjts9jQE6jHRLLm7AHBU" fill="none" stroke="transparent)" stroke-width="0" style="transform: none;"><g style="transform: none;"><path id="pjR7ZnCSa" d="M 0 1200 l 0 -1200 1150 0 1150 0 0 1200 0 1200 -1150 0 -1150 0 0 -1200 z  m 635 1001 c 110 -33 263 -76 340 -96 l 140 -35 59 0 59 0 66 19 c 36 10 120 33 186 51 66 17 172 48 235 67 63 20 135 42 159 49 l 43 14 -13 -17 c -8 -10 -62 -72 -121 -139 -58 -67 -137 -159 -174 -204 l -68 -82 -178 -159 c -97 -88 -181 -159 -186 -159 -4 0 -37 26 -73 58 -37 31 -107 92 -157 135 -50 44 -114 104 -143 135 -29 32 -82 89 -118 127 -37 39 -88 97 -115 130 -27 33 -74 87 -105 119 -31 32 -51 56 -46 54 6 -3 100 -33 210 -67 z  m -132 -281 c 30 -36 54 -66 52 -68 -1 -2 -47 19 -101 45 l -98 48 -28 83 c -15 46 -30 93 -34 105 l -6 22 79 -85 c 44 -47 105 -114 136 -150 z  m 1522 160 c -8 -25 -21 -70 -30 -101 l -15 -55 -38 -18 c -48 -24 -142 -56 -142 -50 0 15 229 278 236 271 2 -1 -4 -23 -11 -47 z  m -1420 -485 l 181 -90 112 -84 112 -83 5 -22 c 2 -11 9 -106 14 -209 l 10 -188 -9 -22 c -4 -12 -41 -86 -82 -164 l -74 -142 -54 92 c -101 173 -118 202 -226 382 -59 99 -134 229 -166 290 -32 60 -81 145 -107 190 -27 44 -69 115 -95 158 -25 43 -54 90 -63 104 l -18 27 140 -74 c 77 -41 221 -115 320 -165 z  m 1519 128 c -38 -70 -154 -266 -322 -548 -53 -88 -155 -261 -227 -385 -72 -124 -194 -331 -271 -461 l -139 -236 -53 91 c -30 50 -67 117 -83 148 l -28 56 57 119 c 32 65 87 179 123 253 35 74 86 176 112 225 26 50 69 133 94 185 25 52 79 152 120 223 l 75 127 24 19 24 19 52 17 c 72 23 318 131 403 177 39 21 72 38 73 38 2 0 -13 -30 -34 -67 z  m -915 -465 c -17 -34 -19 -34 -19 -5 l 0 27 15 0 16 0 -12 -22 z "></path></g></g><g id="l4hA77PeL8qzh0QLCSdLjF9" fill="rgb(238,245,249)" style="transform: none;"><g style="transform: none;"><path id="pT9E6LLlD" d="M 160 2328 c 0 -6 22 -55 49 -107 l 48 -96 33 -100 c 18 -55 38 -106 44 -112 6 -7 88 -47 181 -88 l 168 -75 5 5 6 5 -24 33 c -54 73 -491 547 -505 547 -3 0 -5 -5 -5 -12 z "></path><path id="pTYxI866B" d="M 331 2308 c 13 -18 55 -67 94 -108 39 -41 93 -102 121 -135 149 -182 371 -398 582 -567 l 47 -38 16 0 16 0 19 21 c 10 12 92 87 181 166 l 163 144 72 87 c 40 48 138 161 217 252 79 91 151 174 160 184 l 16 19 -40 -7 c -22 -4 -125 -33 -230 -66 -104 -32 -244 -73 -310 -90 -66 -18 -150 -41 -186 -51 -36 -11 -79 -19 -95 -19 -63 0 -532 131 -752 210 -46 17 -90 30 -98 30 l -15 0 22 -32 z "></path><path id="p5Pq3rXYO" d="M 2034 2187 l -140 -142 -88 -110 c -48 -60 -94 -123 -102 -138 l -15 -29 5 -6 6 -5 47 25 c 27 14 80 37 118 51 39 14 87 33 107 43 l 38 18 15 55 c 34 121 49 160 102 264 30 60 53 111 50 113 -2 2 -66 -60 -143 -139 z "></path><path id="pJthN1OFv" d="M 71 1888 c 20 -39 71 -126 220 -373 26 -45 75 -130 107 -190 32 -61 107 -191 166 -290 124 -206 147 -245 241 -407 37 -65 71 -118 74 -117 3 0 48 85 99 189 l 94 189 -12 223 c -6 123 -13 231 -16 240 l -5 17 -117 87 -117 87 -125 60 c -143 68 -454 232 -549 289 -36 21 -68 38 -73 38 l -8 0 21 -42 z "></path><path id="p10t7NqT1m" d="M 2205 1870 l -50 -38 -110 -55 c -132 -67 -271 -128 -379 -167 l -78 -29 -19 -17 c -27 -24 -129 -201 -225 -389 -45 -88 -91 -178 -103 -200 -26 -49 -236 -483 -262 -543 l -19 -44 20 -46 c 12 -26 56 -109 98 -184 l 77 -137 9 2 c 8 3 158 254 441 737 72 124 174 297 227 385 256 429 438 744 438 757 0 14 -14 8 -65 -32 z "></path><path id="pBjln9NN1" d="M 1203 1313 l -43 -4 0 -28 c 0 -15 3 -62 6 -104 l 7 -77 8 0 7 0 12 38 c 7 20 29 70 51 110 l 38 72 -22 -2 c -12 -1 -41 -3 -64 -5 z "></path></g></g></svg>
+                <a href="#" class="logo" onclick="scrollToSection('home')">
+                    <svg class="isvg-container" id="outputsvg" xmlns="http://www.w3.org/2000/svg" style="transform: matrix(1.01591, 0, 0, 1.01591, -17.3648, -3.48028); transform-origin: 50% 50%; transform:scale(1.5); cursor: pointer; transition: none 0s ease 0s;" width="23" height="24" viewBox="0 0 2300 2400"><g id="l6nyjts9jQE6jHRLLm7AHBU" fill="none" stroke="transparent)" stroke-width="0" style="transform: none;"><g style="transform: none;"><path id="pjR7ZnCSa" d="M 0 1200 l 0 -1200 1150 0 1150 0 0 1200 0 1200 -1150 0 -1150 0 0 -1200 z  m 635 1001 c 110 -33 263 -76 340 -96 l 140 -35 59 0 59 0 66 19 c 36 10 120 33 186 51 66 17 172 48 235 67 63 20 135 42 159 49 l 43 14 -13 -17 c -8 -10 -62 -72 -121 -139 -58 -67 -137 -159 -174 -204 l -68 -82 -178 -159 c -97 -88 -181 -159 -186 -159 -4 0 -37 26 -73 58 -37 31 -107 92 -157 135 -50 44 -114 104 -143 135 -29 32 -82 89 -118 127 -37 39 -88 97 -115 130 -27 33 -74 87 -105 119 -31 32 -51 56 -46 54 6 -3 100 -33 210 -67 z  m -132 -281 c 30 -36 54 -66 52 -68 -1 -2 -47 19 -101 45 l -98 48 -28 83 c -15 46 -30 93 -34 105 l -6 22 79 -85 c 44 -47 105 -114 136 -150 z  m 1522 160 c -8 -25 -21 -70 -30 -101 l -15 -55 -38 -18 c -48 -24 -142 -56 -142 -50 0 15 229 278 236 271 2 -1 -4 -23 -11 -47 z  m -1420 -485 l 181 -90 112 -84 112 -83 5 -22 c 2 -11 9 -106 14 -209 l 10 -188 -9 -22 c -4 -12 -41 -86 -82 -164 l -74 -142 -54 92 c -101 173 -118 202 -226 382 -59 99 -134 229 -166 290 -32 60 -81 145 -107 190 -27 44 -69 115 -95 158 -25 43 -54 90 -63 104 l -18 27 140 -74 c 77 -41 221 -115 320 -165 z  m 1519 128 c -38 -70 -154 -266 -322 -548 -53 -88 -155 -261 -227 -385 -72 -124 -194 -331 -271 -461 l -139 -236 -53 91 c -30 50 -67 117 -83 148 l -28 56 57 119 c 32 65 87 179 123 253 35 74 86 176 112 225 26 50 69 133 94 185 25 52 79 152 120 223 l 75 127 24 19 24 19 52 17 c 72 23 318 131 403 177 39 21 72 38 73 38 2 0 -13 -30 -34 -67 z  m -915 -465 c -17 -34 -19 -34 -19 -5 l 0 27 15 0 16 0 -12 -22 z "></path></g></g><g id="l4hA77PeL8qzh0QLCSdLjF9" fill="rgb(238,245,249)" style="transform: none;"><g style="transform: none;"><path id="pT9E6LLlD" d="M 160 2328 c 0 -6 22 -55 49 -107 l 48 -96 33 -100 c 18 -55 38 -106 44 -112 6 -7 88 -47 181 -88 l 168 -75 5 5 6 5 -24 33 c -54 73 -491 547 -505 547 -3 0 -5 -5 -5 -12 z "></path><path id="pTYxI866B" d="M 331 2308 c 13 -18 55 -67 94 -108 39 -41 93 -102 121 -135 149 -182 371 -398 582 -567 l 47 -38 16 0 16 0 19 21 c 10 12 92 87 181 166 l 163 144 72 87 c 40 48 138 161 217 252 79 91 151 174 160 184 l 16 19 -40 -7 c -22 -4 -125 -33 -230 -66 -104 -32 -244 -73 -310 -90 -66 -18 -150 -41 -186 -51 -36 -11 -79 -19 -95 -19 -63 0 -532 131 -752 210 -46 17 -90 30 -98 30 l -15 0 22 -32 z "></path><path id="p5Pq3rXYO" d="M 2034 2187 l -140 -142 -88 -110 c -48 -60 -94 -123 -102 -138 l -15 -29 5 -6 6 -5 47 25 c 27 14 80 37 118 51 39 14 87 33 107 43 l 38 18 15 55 c 34 121 49 160 102 264 30 60 53 111 50 113 -2 2 -66 -60 -143 -139 z "></path><path id="pJthN1OFv" d="M 71 1888 c 20 -39 71 -126 220 -373 26 -45 75 -130 107 -190 32 -61 107 -191 166 -290 124 -206 147 -245 241 -407 37 -65 71 -118 74 -117 3 0 48 85 99 189 l 94 189 -12 223 c -6 123 -13 231 -16 240 l -5 17 -117 87 -117 87 -125 60 c -143 68 -454 232 -549 289 -36 21 -68 38 -73 38 l -8 0 21 -42 z "></path><path id="p10t7NqT1m" d="M 2205 1870 l -50 -38 -110 -55 c -132 -67 -271 -128 -379 -167 l -78 -29 -19 -17 c -27 -24 -129 -201 -225 -389 -45 -88 -91 -178 -103 -200 -26 -49 -236 -483 -262 -543 l -19 -44 20 -46 c 12 -26 56 -109 98 -184 l 77 -137 9 2 c 8 3 158 254 441 737 72 124 174 297 227 385 256 429 438 744 438 757 0 14 -14 8 -65 -32 z "></path><path id="pBjln9NN1" d="M 1203 1313 l -43 -4 0 -28 c 0 -15 3 -62 6 -104 l 7 -77 8 0 7 0 12 38 c 7 20 29 70 51 110 l 38 72 -22 -2 c -12 -1 -41 -3 -64 -5 z "></path></g></g></svg>
                     </a> <!-- Alteração aqui -->
                 <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
                 <ul class="menu-items">
@@ -31,34 +37,52 @@
             </div>
         </nav>
     </header>
-
     <main>
         <section id="home">
             <h2>Home</h2>
+            <div class="speech-bubble">Nas próximas atualizações...</div>
+            <div class="hammer"></div>
             <!-- Conteúdo da seção Home -->
         </section>
         <section id="about">
-            <h2>Sobre</h2>
+            <div class="speech-bubble">Nas próximas atualizações...</div>
+            <div class="hammer"></div>
             <!-- Conteúdo da seção Sobre -->
         </section>
         <section id="education">
             <h2>Formação</h2>
-            <!-- Conteúdo da seção Formação -->
+            <h2>Bacharel em Sistemas de Informação</h2>
+            <p>Janeiro de 2012 até Junho de 2016, Faculdade Adventista de Hortolândia - Hortolândia - SP</p>
+                <br>
+            <h2>Técnico Administrativo</h2>
+            <p>Janeiro de 2010 até Dezembro  de 2011, CECAPI - Serra - ES</p>
+                <br>
+            <h2>Ensino Médio</h2>
+            <p>Janeiro de 2008 até Dezembro  de 2010, EEEFM Jacaraípe - Serra - ES</p>
+            
         </section>
         <section id="experience">
             <h2>Experiência</h2>
-            <!-- Conteúdo da seção Experiência -->
+            <h2>Associação Paulista Sudoeste / Instrutor de Informática</h2>
+            <p class="explocal">Período: Outubro de 2019 - Dezembro de 2020,Localização: Sorocaba, SP</p>
+            <p>Como instrutor de informática pela <abbr title="Associação Paulista Sudoeste">APSo</abbr>, forneci todo e qualquer suporte técnico durante a pandemia da COVID-19 ao <abbr title="Colégio Adventista de Sorocaba">CAS</abbr>, realizando configuração de salas virtuais e hibridas, gerenciamento de mídias sociais e políticas de segurança digitais.</p>
+            <br>
+            <h2>Instituto Adventista de São Paulo / Laboratorista</h2>           
+            <p class="explocal">
+            Período: Fevereiro de 2012 - Junho de 2016, Localização: Hortolândia, SP</p>
+            <p>Responsável pela manutenção dos laboratórios de informática, incluindo formatação, instalação de drivers, sistemas operacionais e ativação de licenças. Além disso, gerenciava contas de usuários através do Active Directory.</p> 
         </section>
         <section id="projects">
-            <h2>Projetos</h2>
+            <div class="speech-bubble">Nas próximas atualizações...</div>
+            <div class="hammer"></div>
             <!-- Conteúdo da seção Projetos -->
         </section>
         <section id="contact">
-            <h2>Contato</h2>
+            <div class="speech-bubble">Nas próximas atualizações...</div>
+            <div class="hammer"></div>
             <!-- Conteúdo da seção Contato -->
         </section>
     </main>
-
     <script src="script.js"></script>
 </body>
 </html>
