--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Artur Maurício">
     <meta property="og:description" content="Currículo e Portfólio">
-    <meta property="og:image" content="https://arturmauricioss.github.io/media/arturog.jpg">
+    <meta property="og:image" content="https://arturmauricioss.github.io/media/img/arturog.jpg">
     <meta property="og:url" content="https://arturmauricioss.github.io/">
     <title>Portfólio Avallon</title>
     <link rel="stylesheet" href="styles.css">
