--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                     <a target=”_blank”  href="https://www.facebook.com/artur.mauricio.129"> <!-- Facebook -->
                         <img class="icon" src="media/img/facebook.png" alt="Facebook"> 
                     </a>
-                    <a target=”_blank”  href="">
-                        Arrumar linkedin <!-- LinkedIn -->
+                    <a target=”_blank”  href=""><!-- LinkedIn -->
                         <img class="icon" src="media/img/linkedin.png" alt="LinkedIn">
                    </a>
                    <a target=”_blank”  href="https://github.com/arturmauricioss"> <!-- GitHub -->
