--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h1>Projetos</h1>
         <div id="projects">
             <div class="proj1">
-                <h3>Editor e Compilador SVG<a href="https://github.com/arturmauricioss/avallonsvg/tutorialsvg.html" title="Tutorial" target="_blank"> ?</a></h3>
+                <h3>Editor e Compilador SVG<a href="https://arturmauricioss.github.io/avallonsvg/tutorialsvg.html" title="Tutorial" target="_blank"> ?</a></h3>
                 <div id="svgPreview" class="quadriculado">
                     <img id="imgproj1" src="media/img/logocolorido.png" alt="Ícone de imagem">
                 </div>
