--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <title>Portfólio Avallon</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="media/img/logocolorido.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/xml/xml.min.js"></script>
 
 </head>
 <body>
@@ -97,9 +94,13 @@
         
     <section id="works">
         <h1>Projetos</h1>
-        <div id="projects">
-            <div class="proj1">
-                <h3>Editor e Compilador SVG<a href="https://arturmauricioss.github.io/avallonsvg/tutorialsvg.html" title="Tutorial" target="_blank"> ?</a></h3>
+            <div id="projects">
+
+                <div class="proj1 proj" data-url="../svg/tutorialsvg.html" target="_blank">
+                       <h3>Avallon SVG</h3> 
+                </div>
+            <!-- <div class="proj1">
+                <h3>Editor e Compilador de Imagens Vetorizadas em SVG<a href="https://arturmauricioss.github.io/avallonsvg/tutorialsvg.html" title="Tutorial" target="_blank"> ?</a></h3>
                 <div id="svgPreview" class="quadriculado">
                     <img id="imgproj1" src="media/img/logocolorido.png" alt="Ícone de imagem">
                 </div>
@@ -111,9 +112,14 @@
                     <button id="botaopng">PNG</button>
                 </div>
                 <canvas id="canvas" style="display: none;"></canvas>
+            </div> -->
+            <div class="proj2 proj" data-url="../rpg2/rpg2.html" target="_blank">
+                <h3>Avallon RPG</h3>
             </div>
-            <div class="proj2"></div>
-            <div class="proj3"></div>
+            <div class="proj3 proj" data-url="../pagarme/public/index.html" target="_blank">
+                <h3>PROJ 3</h3>
+                <p>Utilizar a API do Pagar.me para simular uma compra</p>
+            </div>
         </div>
     </section>
         
