--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h1>Projetos</h1>
             <div id="projects">
 
-                <div class="proj1 proj" data-url="../svg/tutorialsvg.html" target="_blank">
+                <div class="proj1 proj" href="https://arturmauricioss.github.io/avallonsvg/tutorialsvg.html" target="_blank">
                        <h3>Avallon SVG</h3> 
                 </div>
             <!-- <div class="proj1">
@@ -113,10 +113,10 @@
                 </div>
                 <canvas id="canvas" style="display: none;"></canvas>
             </div> -->
-            <div class="proj2 proj" data-url="../rpg2/rpg2.html" target="_blank">
+            <div class="proj2 proj" href="https://arturmauricioss.github.io/rpg2/rpg2.html" target="_blank">
                 <h3>Avallon RPG</h3>
             </div>
-            <div class="proj3 proj" data-url="../pagarme/public/index.html" target="_blank">
+            <div class="proj3 proj" href="https://arturmauricioss.github.io/pagarme/public/index.html" target="_blank">
                 <h3>PROJ 3</h3>
                 <p>Utilizar a API do Pagar.me para simular uma compra</p>
             </div>
