--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="proj2 proj" data-url="../rpg2/rpg2.html" target="_blank">
                 <h3>Avallon RPG</h3>
             </div>
-            <div class="proj3 proj" data-url="../pagarme/public/index.html" target="_blank">
+            <div class="proj3 proj" data-url="../pagarme/frontend/index.html" target="_blank">
                 <h3>PROJ 3</h3>
                 <p>Utilizar a API do Pagar.me para simular uma compra</p>
             </div>
