--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         <section id="home">
             <div class="homecontainer">
                 <!-- Espaçamento no celular nao esta agradavel -->
-                <h1>Olá</h1><span>!</span>
+                <h1 id="ola">Olá</h1><span id="exclamacao">!</span>
             </div>
         </section> 
+        
 
         <section id="about">
             <!-- Espaçamento no celular nao esta agradavel -->
@@ -152,19 +153,19 @@
 <!-- Contatos -->   
                     <div class="icon-category">
                     <a target=”_blank”  href="https://x.com/arturmsg"> <!-- Twitter -->
-                        <img class="icon" src="media/img/twitter.png" alt="Twitter">
+                        <img id="idtwitter" class="icon" src="media/img/twitter.png" alt="Twitter">
                     </a>
                     <a target=”_blank”  href="https://www.facebook.com/artur.mauricio.129"> <!-- Facebook -->
-                        <img class="icon" src="media/img/facebook.png" alt="Facebook"> 
+                        <img id="idfacebook" class="icon" src="media/img/facebook.png" alt="Facebook"> 
                     </a>
                     <a target=”_blank”  href="https://www.linkedin.com/in/artur-maur%C3%ADcio-santos-da-silva-b123b3119/"><!-- LinkedIn -->
-                        <img class="icon" src="media/img/linkedin.png" alt="LinkedIn">
+                        <img id="idlinkedin" class="icon" src="media/img/linkedin.png" alt="LinkedIn">
                    </a>
                    <a target=”_blank”  href="https://github.com/arturmauricioss"> <!-- GitHub -->
-                        <img class="icon" src="media/img/github.png" alt="GitHub">
+                        <img id="idgithub" class="icon" src="media/img/github.png" alt="GitHub">
                     </a>
                     <a target=”_blank” href="https://www.reddit.com/user/arturmsg/"> <!-- Reddit -->
-                        <img class="icon" src="media/img/reddit.png" alt="Reddit">
+                        <img id="idreddit" class="icon" src="media/img/reddit.png" alt="Reddit">
                     </a>
                     </div>
                 </div>
