--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     </a>
                 <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
                 <ul class="menu-items">
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#education">Formação</a></li>
-                    <li><a href="#experience">Experiência</a></li>
-                    <li><a href="#works">Projetos</a></li>
-                    <li><a href="#contact">Contato</a></li>
+                    <a href="#about"><li>Sobre</li></a>
+                    <a href="#education"><li>Formação</li></a>
+                    <a href="#experience"><li>Experiência</li></a>
+                    <a href="#works"><li>Projetos</li></a>
+                    <a href="#contact"><li>Contato</li></a>
                 </ul>
             </div>
         </nav>
@@ -95,11 +95,11 @@
         
     <section id="works">
         <h1>Projetos</h1>
-            <div id="projects">
+        <div id="projects">
 
-                <div class="proj1 proj" data-url="../avallonsvg/tutorialsvg.html" target="_blank">
-                       <h3>Avallon SVG</h3> 
-                </div>
+            <div class="proj1 proj" data-url="../avallonsvg/tutorialsvg.html" target="_blank">
+                <h3>SVG</h3> 
+            </div>
             <!-- <div class="proj1">
                 <h3>Editor e Compilador de Imagens Vetorizadas em SVG<a href="https://arturmauricioss.github.io/avallonsvg/tutorialsvg.html" title="Tutorial" target="_blank"> ?</a></h3>
                 <div id="svgPreview" class="quadriculado">
@@ -115,10 +115,10 @@
                 <canvas id="canvas" style="display: none;"></canvas>
             </div> -->
             <div class="proj2 proj" data-url="../rpg2/rpg2.html" target="_blank">
-                <h3>Avallon RPG</h3>
+                <h3>RPG</h3>
             </div>
-            <div class="proj3 proj" data-url="../pagarme/frontend/index.html" target="_blank">
-                <h3>PROJ 3</h3>
+            <div class="proj3 proj" data-url="../qrcoder/index.html" target="_blank">
+                <h3>QR Coder</h3>
             </div>
         </div>
     </section>
@@ -128,7 +128,7 @@
                 <div class="flexcontact form-container">
                     <form id="contactForm" method="post" action="https://formspree.io/f/xayrryag">
                         <h1>Entre em contato</h1>
-                        <p>Coloque seus dados corretamente e logo entrarei em contato com você</p>                                       
+                        <p>Coloque seus dados corretamente e logo entrarei em contato com você!</p>                                       
                         <div class="input-single">
                             <input type="text" id="nome-box" class="input" name="nome" required>
                             <label for="nome-box">Seu nome completo</label>
