--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </a>
                 <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
                 <ul class="menu-items">
-                    <a href="#" onclick="scrollToSection('about')"><li>Sobre</li></a>
+                    <a href="#about"><li>Sobre</li></a>
                     <a href="#education"><li>Formação</li></a>
                     <a href="#experience"><li>Experiência</li></a>
                     <a href="#works"><li>Projetos</li></a>
@@ -39,7 +39,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="content">
         <!-- <section id="home">
             <div class="homecontainer">
                 
