--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
         <h1>Projetos</h1>
         <div id="projects">
 
-            <div class="proj1 proj" data-url="../avallonsvg/svg.html" target="_blank">
-                <h3>Avallon SVG</h3> 
+            <div class="proj1 proj" data-url="../avallonsvg/svg.html" target="_blank" title="atualizado em 15/07/24">
+                <h3>Avallon SVG</h3>
+                
             </div>
             <!-- <div class="proj1">
                 <h3>Editor e Compilador de Imagens Vetorizadas em SVG<a href="https://arturmauricioss.github.io/avallonsvg/tutorialsvg.html" title="Tutorial" target="_blank"> ?</a></h3>
@@ -120,10 +121,10 @@
                 </div>
                 <canvas id="canvas" style="display: none;"></canvas>
             </div> -->
-            <div class="proj2 proj" data-url="../rpg2/rpg2.html" target="_blank">
+            <div class="proj2 proj" data-url="../rpg2/rpg2.html" target="_blank" title="atualizado em 18/07/24">
                 <h3>Avallon RPG</h3>
             </div>
-            <div class="proj3 proj" data-url="../qrcoder/index.html" target="_blank">
+            <div class="proj3 proj" data-url="../qrcoder/index.html" target="_blank" title="atualizado em 15/07/24">
                 <h3>Avallon QR Code</h3>
             </div>
         </div>
