--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
                         <h1>Entre em contato</h1>
                         <p>Coloque seus dados corretamente e logo entrarei em contato com você!</p>                                       
                         <div class="input-single">
-                            <input type="text" id="nome-box" class="input" name="nome" required>
+                            <input type="text" id="nome-box" class="input" name="nome" required  placeholder=" "/>
                             <label for="nome-box">Seu nome completo</label>
                             <span class="error-message" id="nome-error"></span>
                         </div>
                         <div class="input-single">
-                            <input type="text" id="email-box" class="input" name="email" required>
+                            <input type="text" id="email-box" class="input" name="email" required  placeholder=" "/>
                             <label for="email-box">Seu e-mail</label>
                             <span class="error-message" id="email-error"></span>
                         </div>
                         <div class="input-single">
-                            <input type="text" id="tel-box" class="input" name="telefone" required style=>
+                            <input type="text" id="tel-box" class="input" name="telefone" required  placeholder=" "/>
                             <label for="tel-box">Seu telefone</label>
                             <span class="error-message" id="tel-error"></span>
                         </div>                
