--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <g
                 id="svgp1"
                 fill="none"
-                stroke="transparent)"
+                stroke="transparent"
                 stroke-width="0"
                 style="transform: none"
               >
@@ -202,7 +202,9 @@
             target="_blank"
             title="atualizado em 15/07/24"
           >
-            <h3>Avallon SVG</h3>
+          <video class="background-video" src="media/video/svg.mp4" autoplay muted loop></video>
+          <div class="overlay"></div>  
+          <h3>Avallon SVG</h3>
           </div>
           <!-- antes o projeto funcionava por aqui mesmo mas decidi remover para otimizar a pagina principal
             <div class="proj1">
@@ -225,7 +227,9 @@
             data-url="../rpg2/rpg2.html"
             target="_blank"
             title="atualizado em 18/07/24"
-          >
+          >          
+          <video class="background-video" src="media/video/rpg.mp4" autoplay muted loop></video>
+          <div class="overlay"></div> 
             <h3>Avallon RPG</h3>
           </div>
           <div
@@ -235,6 +239,8 @@
             target="_blank"
             title="atualizado em 15/07/24"
           >
+          <video class="background-video" src="media/video/qrcode.mp4" autoplay muted loop></video>
+          <div class="overlay"></div> 
             <h3>Avallon QR Code</h3>
           </div>
         </div>
@@ -354,7 +360,7 @@
           </div>
         </div>
         <div id="footer-info">
-          Site em desenvolvimento atualizado em: 18/07/2024
+          Site em desenvolvimento atualizado em: 29/07/2024
         </div>
       </section>
     </main>
