--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             tabindex="0"
             data-url="../avallonsvg/svg.html"
             target="_blank"
-            title="atualizado em 15/07/24"
+            title="atualizado em 29/07/24"
           >
           <video class="background-video" src="media/video/svg.mp4" autoplay muted loop></video>
           <div class="overlay"></div>  
@@ -247,7 +247,7 @@
       </section>
 
       <section id="contact" tabindex="-1">
-        <div class="container">
+        <div class="container tabindex">
           <div class="flexcontact form-container">
             <form
               id="contactForm"
