modificações de estrutura do html

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
           </a>
           <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
           <ul class="menu-items">
-            <a href="#about"><li>Sobre</li></a>
-            <a href="#education"><li>Formação</li></a>
-            <a href="#experience"><li>Experiência</li></a>
-            <a href="#works"><li>Projetos</li></a>
-            <a href="#contact"><li>Contato</li></a>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#education">Formação</a></li>
+            <li><a href="#experience">xperiência</a></li>
+            <li><a href="#works">Projetos</a></li>
+            <li><a href="#contact">Contato</a></li>
           </ul>
         </div>
       </nav>
@@ -202,9 +202,15 @@
             target="_blank"
             title="atualizado em 29/07/24"
           >
-          <video class="background-video" src="media/video/svg.mp4" autoplay muted loop></video>
-          <div class="overlay"></div>  
-          <h3>Avallon SVG</h3>
+            <video
+              class="background-video"
+              src="media/video/svg.mp4"
+              autoplay
+              muted
+              loop
+            ></video>
+            <div class="overlay"></div>
+            <h3>Avallon SVG</h3>
           </div>
           <!-- antes o projeto funcionava por aqui mesmo mas decidi remover para otimizar a pagina principal
             <div class="proj1">
@@ -227,9 +233,15 @@
             data-url="../rpg2/rpg2.html"
             target="_blank"
             title="atualizado em 18/07/24"
-          >          
-          <video class="background-video" src="media/video/rpg.mp4" autoplay muted loop></video>
-          <div class="overlay"></div> 
+          >
+            <video
+              class="background-video"
+              src="media/video/rpg.mp4"
+              autoplay
+              muted
+              loop
+            ></video>
+            <div class="overlay"></div>
             <h3>Avallon RPG</h3>
           </div>
           <div
@@ -239,8 +251,14 @@
             target="_blank"
             title="atualizado em 15/07/24"
           >
-          <video class="background-video" src="media/video/qrcode.mp4" autoplay muted loop></video>
-          <div class="overlay"></div> 
+            <video
+              class="background-video"
+              src="media/video/qrcode.mp4"
+              autoplay
+              muted
+              loop
+            ></video>
+            <div class="overlay"></div>
             <h3>Avallon QR Code</h3>
           </div>
         </div>
