atualizando para uma nova versão

--- a/index.html
+++ b/index.html
@@ -35,13 +35,6 @@
               class="isvg-container"
               id="logosvg"
               xmlns="http://www.w3.org/2000/svg"
-              style="
-                transform: matrix(1.01591, 0, 0, 1.01591, -17.3648, -3.48028);
-                transform-origin: 50% 50%;
-                transform: scale(1.5);
-                cursor: pointer;
-                transition: none 0s ease 0s;
-              "
               width="23"
               height="24"
               viewBox="0 0 2300 2400"
@@ -94,9 +87,10 @@
           <ul class="menu-items">
             <li><a href="#about">Sobre</a></li>
             <li><a href="#education">Formação</a></li>
-            <li><a href="#experience">xperiência</a></li>
+            <li><a href="#experience">Experiência</a></li>
             <li><a href="#works">Projetos</a></li>
             <li><a href="#contact">Contato</a></li>
+            <li><a href="htmlversion2.html" target="_blank">Currículo</a></li>
           </ul>
         </div>
       </nav>
