--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li><a href="#experience">Experiência</a></li>
             <li><a href="#works">Projetos</a></li>
             <li><a href="#contact">Contato</a></li>
-            <li><a href="htmlversion2.html" target="_blank">Currículo</a></li>
+            <li><a href="htmlversion2.html" target="_blank">versão 2</a></li>
           </ul>
         </div>
       </nav>
