--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <section id="about" tabindex="0" class="tabindex">
         <div class="aboutcontainer">
-          <h1>Um pouco de mim</h1>
+          <h1>Um pouco de mim mas</h1>
           <div class="image-container">
             <img src="media/img/arturperfil.jpeg" alt="Foto de perfil" />
           </div>
